--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.2",
     "vue": "^3.5.18"
   },
   "devDependencies": {
