--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
-    "vue": "^3.5.18"
+    "element-plus": "^2.11.2",
+    "vue": "^3.5.21",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
