debut API fetch issue

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
 fastapi>=0.110,<1.0
 uvicorn[standard]>=0.24,<1.0
 python-multipart>=0.0.9
-numpy>=1.24
-PIL
+Pillow>=10.0,<11.0
+numpy>=1.26,<2.0  
