--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
+tensorflow-cpu==2.16.1
 fastapi>=0.110,<1.0
 uvicorn[standard]>=0.24,<1.0
 python-multipart>=0.0.9
 Pillow>=10.0,<11.0
-numpy>=1.26,<2.0  
+numpy>=1.26,<3.0
